--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,9 @@
     "angular-sanitize": "~1.4.7",
     "socket.io-client": "~1.4.5",
     "angularjs-geolocation": "~0.1.1",
-    "angular-socket-io": "~0.7"
+    "angular-socket-io": "~0.7",
+    "d3": "^3.5.16",
+    "ngReact": "^0.2.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.3",
