--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "type": "git",
     "url": "git@bitbucket.org:kbytedesign/kbyteui.git"
   },
-  "dependencies": {},
+  "dependencies": {
+    "d3": "^3.5.16",
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7"
+  },
   "devDependencies": {
     "browserify": "~10.0.0",
     "del": "^2.2.0",
