--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,9 @@
     "angularjs-geolocation": "~0.1.1",
     "angular-socket-io": "~0.7",
     "d3": "^3.5.16",
-    "ngReact": "^0.2.0"
+    "ngReact": "^0.2.0",
+    "rangy": "^1.3.0",
+    "angular-animate": "^1.5.3"
   },
   "devDependencies": {
     "angular-mocks": "~1.3",
