--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,6 @@
     "jquery.inputmask": "~3.1",
     "angular-google-analytics": "~0.0.9",
     "spectrum": "~1.6.2",
-    "pace": "~1.0.2",
     "bootstrap-sass-official": "~3.3.5",
     "angular-sanitize": "~1.4.7",
     "socket.io-client": "~1.4.5",
@@ -26,7 +25,7 @@
     "angular-animate": "^1.5.3"
   },
   "devDependencies": {
-    "angular-mocks": "~1.3",
+    "angular-mocks": "^1.3",
     "angular-scenario": "~1.3"
   },
   "appPath": "app",
