--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-dom": "^0.14.7"
   },
   "devDependencies": {
-    "browserify": "~10.0.0",
+    "browserify": "^10.0.0",
     "del": "^2.2.0",
     "gulp": "^3.9.1",
     "gulp-bower": "0.0.10",
@@ -25,7 +25,10 @@
     "gulp-rev": "^7.0.0",
     "gulp-ruby-sass": "^0.7.1",
     "jasmine-core": "^2.4.1",
+    "karma-browserify": "^5.0.3",
+    "karma-chrome-launcher": "^0.2.3",
     "karma-jasmine": "^0.3.7",
+    "karma-jasmine-jquery": "^0.1.1",
     "karma-phantomjs-launcher": "^1.0.0",
     "main-bower-files": "^2.9.0",
     "phantomjs": "^2.1.3",
@@ -33,7 +36,8 @@
     "stripify": "^3.0.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
-    "vinyl-transform": "^1.0.0"
+    "vinyl-transform": "^1.0.0",
+    "watchify": "^3.7.0"
   },
   "engines": {
     "node": ">=0.10.0"
