--- a/bower.json
+++ b/bower.json
@@ -3,11 +3,11 @@
   "version": "0.0.0",
   "dependencies": {
     "jquery": "~1.11",
-    "angular": "~1.3",
-    "bootstrap": "~3.3",
-    "angular-ui-router": "~0.2",
+    "angular": "^1.5",
+    "bootstrap": "^3.3",
+    "angular-ui-router": "^1.0",
     "velocity": "~1.1",
-    "angular-bootstrap": "~0.12",
+    "angular-bootstrap": "^2.0.0",
     "lodash": "~2.4",
     "fastclick": "~1.0",
     "fontawesome": "~4.2",
@@ -15,18 +15,18 @@
     "angular-google-analytics": "~0.0.9",
     "spectrum": "~1.6.2",
     "bootstrap-sass-official": "~3.3.5",
-    "angular-sanitize": "~1.4.7",
+    "angular-sanitize": "^1.5.0",
     "socket.io-client": "~1.4.5",
-    "angularjs-geolocation": "~0.1.1",
-    "angular-socket-io": "~0.7",
-    "d3": "^3.5.16",
+    "angularjs-geolocation": "^0.1.1",
+    "angular-socket-io": "^0.7",
+    "d3": "^4",
     "ngReact": "^0.2.0",
     "rangy": "^1.3.0",
     "angular-animate": "^1.5.3"
   },
   "devDependencies": {
-    "angular-mocks": "^1.3",
-    "angular-scenario": "~1.3"
+    "angular-mocks": "^1.5",
+    "angular-scenario": "^1.5"
   },
   "appPath": "app",
   "resolutions": {
